--- a/References/references.bib
+++ b/References/references.bib
@@ -321,6 +321,59 @@ doi = {10.1088/1742-6596/1566/1/012070}
 	year = {2022},
 	note = {[Accessed 20-Oct-2022]},
 }
+
+@article{BellAndLaPadulaSecurityModel,
+	title = {The {Bell} and {La} {Padula} {Security} {Model}},
+	abstract = {A precise description is given of the Bell and La Padula security model using modern notation. The development faithfully follows that of the original presentation [1, 2]. The paper is intended to provide a basis for more exact, formal, and scientiﬁc discussion of the model than has been the case heretofore.},
+	language = {en},
+	author = {Rushby, John},
+	file = {Rushby - The Bell and La Padula Security Model.pdf:/Users/akilan/Zotero/storage/UZWBNZ4B/Rushby - The Bell and La Padula Security Model.pdf:application/pdf},
+}
+
+@misc{Biba,
+	title = {Biba {Model} - an overview {\textbar} {ScienceDirect} {Topics}},
+	url = {https://www.sciencedirect.com/topics/computer-science/biba-model},
+	urldate = {2023-01-08},
+	file = {Biba Model - an overview | ScienceDirect Topics:/Users/akilan/Zotero/storage/G3BA8P6K/biba-model.html:text/html},
+}
+
+
+@article{DIFT,
+	title = {Dynamic {Information} {Flow} {Tracking}: {Taxonomy}, {Challenges}, and {Opportunities}},
+	volume = {12},
+	issn = {2072-666X},
+	shorttitle = {Dynamic {Information} {Flow} {Tracking}},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8399738/},
+	doi = {10.3390/mi12080898},
+	abstract = {Dynamic information flow tracking (DIFT) has been proven an effective technique to track data usage; prevent control data attacks and non-control data attacks at runtime; and analyze program performance. Therefore, a series of DIFT techniques have been developed recently. In this paper, we summarize the current DIFT solutions and analyze the features and limitations of these solutions. Based on the analysis, we classify the existing solutions into three categories, i.e., software, hardware, software and hardware co-design. We discuss the DIFT design from the perspective of whole system and point out the limitations of current DIFT frameworks. Potential enhancements to these solutions are also presented. Furthermore, we present suggestions about the possible future direction of DIFT solutions so that DIFT can help improve security levels.},
+	number = {8},
+	urldate = {2023-01-08},
+	journal = {Micromachines},
+	author = {Chen, Kejun and Guo, Xiaolong and Deng, Qingxu and Jin, Yier},
+	month = jul,
+	year = {2021},
+	pmid = {34442520},
+	pmcid = {PMC8399738},
+	pages = {898},
+	file = {PubMed Central Full Text PDF:/Users/akilan/Zotero/storage/XF6QDM6J/Chen et al. - 2021 - Dynamic Information Flow Tracking Taxonomy, Chall.pdf:application/pdf},
+}
+
+@misc{Morello,
+	title = {Department of {Computer} {Science} and {Technology} – {CHERI}: {The} {Arm} {Morello} {Board}},
+	url = {https://www.cl.cam.ac.uk/research/security/ctsrd/cheri/cheri-morello.html},
+	urldate = {2023-01-08},
+	file = {Department of Computer Science and Technology – CHERI\: The Arm Morello Board:/Users/akilan/Zotero/storage/AYUQLXZ5/cheri-morello.html:text/html},
+}
+
+@article{CHERI-RISC,
+	title = {Capability {Hardware} {Enhanced} {RISC} {Instructions}: {CHERI} {Instruction}-set architecture},
+	language = {en},
+	author = {Watson, Robert N M and Neumann, Peter G and Woodruff, Jonathan and Anderson, Jonathan and Chisnall, David and Davis, Brooks and Laurie, Ben and Moore, Simon W and Murdoch, Steven J and Roe, Michael},
+	file = {Watson et al. - Capability Hardware Enhanced RISC Instructions CH.pdf:/Users/akilan/Zotero/storage/28G2DJHH/Watson et al. - Capability Hardware Enhanced RISC Instructions CH.pdf:application/pdf},
+}
+
+
+
 %===================
 
 % Timber 
@@ -559,6 +612,66 @@ numpages = {12},
 keywords = {unikernels, heterogeneous isas, migration, offloading},
 location = {Phoenix, AZ, USA},
 series = {HPDC '19}}
+
+% - Sub paper based on popcorn linux for running java applications 
+@inproceedings{APARI,
+	address = {Cracow Poland},
+	title = {Applying source level auto-vectorization to {Aparapi} {Java}},
+	isbn = {978-1-4503-2926-2},
+	url = {https://dl.acm.org/doi/10.1145/2647508.2647519},
+	doi = {10.1145/2647508.2647519},
+	abstract = {Parallelism dominates modern hardware design, from multi-core CPUs to SIMD and GPGPU. This bring with it, however, a need to program this hardware in a programmer-friendly manner. Traditionally, managed languages like Java have struggled to take advantage of data-parallel hardware, but projects like Aparapi provide a programming model that lets the programmer easily express the parallelism within their code, while still programming in a highlevel language.},
+	language = {en},
+	urldate = {2023-01-08},
+	booktitle = {Proceedings of the 2014 {International} {Conference} on {Principles} and {Practices} of {Programming} on the {Java} platform: {Virtual} machines, {Languages}, and {Tools}},
+	publisher = {ACM},
+	author = {Albert, Curt and Murray, Alastair and Ravindran, Binoy},
+	month = sep,
+	year = {2014},
+	pages = {122--132},
+	file = {Albert et al. - 2014 - Applying source level auto-vectorization to Aparap.pdf:/Users/akilan/Zotero/storage/BQSBBHJJ/Albert et al. - 2014 - Applying source level auto-vectorization to Aparap.pdf:application/pdf},
+}
+
+% - sub paper based on popcorn linux (Offloading to the GPU)
+@ARTICLE{AIRA,
+  author={Lyerly, Robert and Murray, Alastair and Barbalace, Antonio and Ravindran, Binoy},
+  journal={IEEE Transactions on Parallel and Distributed Systems}, 
+  title={AIRA: A Framework for Flexible Compute Kernel Execution in Heterogeneous Platforms}, 
+  year={2018},
+  volume={29},
+  number={2},
+  pages={269-282},
+  doi={10.1109/TPDS.2017.2761748}}
+
+% - sub paper based on popcorn linux for the edge containers 
+@article{EdgeContainer,
+author = {Xing, Tong and Barbalace, Antonio and Olivier, Pierre and Karaoui, Mohamed L. and Wang, Wei and Ravindran, Binoy},
+title = {H-Container: Enabling Heterogeneous-ISA Container Migration in Edge Computing},
+year = {2022},
+issue_date = {November 2021},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {39},
+number = {1–4},
+issn = {0734-2071},
+url = {https://doi.org/10.1145/3524452},
+doi = {10.1145/3524452},
+abstract = {Edge computing is a recent computing paradigm that brings cloud services closer to the client. Among other features, edge computing offers extremely low client/server latencies. To consistently provide such low latencies, services should run on edge nodes that are physically as close as possible to their clients. Thus, when the physical location of a client changes, a service should migrate between edge nodes to maintain proximity. Differently from cloud nodes, edge nodes integrate CPUs of different Instruction Set Architectures (ISAs), hence a program natively compiled for a given ISA cannot migrate to a server equipped with a CPU of a different ISA. This hinders migration to the closest node.We introduce H-Container, a system that migrates natively compiled containerized applications across compute nodes featuring CPUs of different ISAs. H-Container advances over existing heterogeneous-ISA migration systems by being (a) highly compatible – no user’s source-code nor compiler toolchain modifications are needed; (b) easily deployable – fully implemented in user space, thus without any OS or hypervisor dependency, and (c) largely Linux-compliant – it can migrate most Linux software, including server applications and dynamically linked binaries. H-Container targets Linux and its already-compiled executables, adopts LLVM, extends CRIU, and integrates with Docker. Experiments demonstrate that H-Container adds no overheads during program execution, while 10–100 ms are added during migration. Furthermore, we show the benefits of H-Container in real-world scenarios, demonstrating, for example, up to 94% increase in Redis throughput when client/server proximity is maintained through heterogeneous container migration.},
+journal = {ACM Trans. Comput. Syst.},
+month = {jul},
+articleno = {5},
+numpages = {36},
+keywords = {containers, Edge, heterogeneous ISA, migration}
+}
+
+% - Sub paper based on popcorn linux hetergenious offloading
+@article{HeterSec,
+	title = {A {Framework} for {Software} {Diversiﬁcation} with {ISA} {Heterogeneity}},
+	abstract = {Software diversiﬁcation is one of the most effective ways to defeat memory corruption based attacks. Traditional software diversiﬁcation such as code randomization techniques diversiﬁes program memory layout and makes it difﬁcult for attackers to pinpoint the precise location of a target vulnerability. Some recent work in the architecture community use diverse ISA conﬁgurations to defeat code injection or code reuse attacks, showing that dynamically switching the ISA on which a program executes is a promising direction for future security systems. However, most of these work either remain in a simulation stage or require extra efforts to write program. In this paper, we propose HeterSec, a framework to secure applications utilizing a heterogeneous ISA setup composed of real world machines. HeterSec runs on top of commodity x86\_64 and ARM64 machines and gives the process the illusion that it runs on a multi-ISA chip multiprocessor (CMP) machine. With HeterSec, a process can dynamically select its underlying ISA environment. Therefore, a protected process would be capable of hiding the instruction set on which it executed or detecting abnormal program behavior by comparing execution results step-by-step from multiple ISA-diversiﬁed instances. To demonstrate the effectiveness of such a software framework, we implemented HeterSec on Linux and showcased its deployability by running it on a pair of x86\_64 and ARM64 servers, connected over InﬁniBand. We then conducted two case studies with HeterSec. In the ﬁrst case, we implemented a multi-ISA moving target defense (MTD) system, which introduces uncertainty at the instruction set level. In the second case, we implemented a multi-ISA-based multi-version execution (MVX) system. The evaluation results show that HeterSec brings security beneﬁts through ISA diversiﬁcation with a reasonable performance overhead.},
+	language = {en},
+	author = {Wang, Xiaoguang and Yeoh, SengMing and Kim, Sang-Hoon and Lyerly, Robert and Olivier, Pierre and Ravindran, Binoy},
+	file = {Wang et al. - A Framework for Software Diversiﬁcation with ISA H.pdf:/Users/akilan/Zotero/storage/EPIY7MZJ/Wang et al. - A Framework for Software Diversiﬁcation with ISA H.pdf:application/pdf},
+}
 
 % - Sub paper based on popcorn linux on Enclave offlaoding 
 @article{PopcornEnclave,
