--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -4,3 +4,66 @@
 %*******************************************************************************
 
 \chapter{Introduction}  %Title of the Introduction
+Modern software practices aim for high performance and better security
+and scalability at the time. There have been few areas of research 
+which have been of great interest in the recent research in support 
+of providing a high performant system with better security as well.
+Few of ways this has been achieved is by trimming down the size of 
+the operating systems, by building a dedicated hardware to manage 
+help manage and execute security policies and the third approach 
+which is a paradigm to support running a single program across 
+various types of cores which could be completely different 
+architectures.
+
+\subsubsection{Trimmed down OS}
+The approach of interest in context of this research would 
+be Uni-kernels. Uni-kernels is specialized single address 
+spaced OS image constructed by using the Library operating 
+system model. A library operating system is the standard services 
+provided by a typical operating system such as networking provided 
+in a form of libraries which is then constructed with the application 
+either at compile time or as a separate process after compile time.
+
+\subsubsection{Dedicated hardware to manage and execute security
+policies}
+In context of the following TAG based architectures would be 
+of interest. Tagged based architecture can be classified as 
+hardware security primitives which data and code with tags. 
+Tags function as security metadata mostly about memory. This is
+created before run-time. During run-time the hardware 
+would enforce the following policies which in return 
+provides security guarantees. 
+
+\subsubsection{Running a single program across cores of 
+various architectures}
+In context of the following the Multi kernel approach would 
+be of interest. Multi-kernel approach treats a multi-core machine 
+as a network of independent cores. This means a program would interact
+multiple cores the same it would interact with a distributed systems 
+using message passing as an example. 
+
+\subsection{Discussion}
+Based on the following 3 subsections discussion the aim of the 
+following PhD would be combine all the 3 approaches into a 
+single system which would allow programs to be more scalable, 
+provide the possibility to certain parts of a program on secure 
+hardware and improve the performance by using a slim down kernel. 
+The literature review section covers the following in depth. 
+
+\subsection{Organization of this report}
+The following report is organized into 6 sections:
+\begin{itemize}
+    \item Introduction: Covers the introduction of the following report 
+    is a simple as possible explanation to incoming sections.
+    \item Research Questions: Covers the identified research questions 
+    based on activities conducted in year 1.
+    \item Literature Review: Covers a full survey of implementations/ papers 
+    on Uni-kernels, Multi-kernels and TAG based architectures.
+    \item Year 1 activity: Covers the activities conducted during the year 1 
+    of the following research.
+    \item Research Timeline: Provides a proposed timeline of activities to conducted 
+    during the following research.
+    \item Conclusion: Provides a summary of the following report.
+\end{itemize}
+
+
