added base analysis which needs more revisions

--- a/References/references.bib
+++ b/References/references.bib
@@ -763,9 +763,31 @@ isbn="978-3-030-47956-5"
 	file = {Lackorzynski - L4Linux Porting Optimizations.pdf:/Users/akilan/Zotero/storage/R2MRZ86X/Lackorzynski - L4Linux Porting Optimizations.pdf:application/pdf},
 }
 
+ˆ% -------------------------------- Research questions analysis ---------------------------
+@misc{IntelSGX,
+	title = {Intel {SGX} {Explained}},
+	url = {https://eprint.iacr.org/undefined/undefined},
+	abstract = {Intel's Software Guard Extensions (SGX) is a set of extensions to the Intel architecture that aims to provide integrity and privacy guarantees to security-sensitive computation performed on a computer where all the privileged software (kernel, hypervisor, etc) is potentially malicious. This paper analyzes Intel SGX, based on the 3 papers that introduced it, on the Intel Software Developer's Manual (which supersedes the SGX manuals), on an ISCA 2015 tutorial, and on two patents. We use the papers, reference manuals, and tutorial as primary data sources, and only draw on the patents to fill in missing information. This paper's contributions are a summary of the Intel-specific architectural and micro-architectural details needed to understand SGX, a detailed and structured presentation of the publicly available information on SGX, a series of intelligent guesses about some important but undocumented aspects of SGX, and an analysis of SGX's security properties.Fixed typos.},
+	urldate = {2023-01-10},
+	author = {Costan, Victor and Devadas, Srinivas},
+}
 
-
-
+@article{Enclave,
+	title = {Managing confidentiality leaks through private algorithms on {Software} {Guard} {eXtensions} ({SGX}) enclaves},
+	volume = {2019},
+	issn = {2510-523X},
+	url = {https://doi.org/10.1186/s13635-019-0091-5},
+	doi = {10.1186/s13635-019-0091-5},
+	abstract = {Many applications are built upon private algorithms, and executing them in untrusted, remote environments poses confidentiality issues. To some extent, these problems can be addressed by ensuring the use of secure hardware in the execution environment; however, an insecure software-stack can only provide limited algorithm secrecy.},
+	number = {1},
+	urldate = {2023-01-10},
+	journal = {EURASIP Journal on Information Security},
+	author = {Küçük, Kubilay Ahmet and Grawrock, David and Martin, Andrew},
+	month = sep,
+	year = {2019},
+	keywords = {Algorithm Owner (AO), Data Owner (DO), Early Private Mode (EPM), Enclave Developer’s (ED) Responsibilities, Hardware Owner (HO), Internal Enclave Functions (IEF), Private Algorithms, Public Internal Enclave Functions (PIEF), Secret-Code Execution (SCE), Serialised Secret Internal Enclave Functions (SSIEF), Side-Channels, Software Guard eXtensions (SGX) Enclave, Trusted Computing Base (TCB)},
+	pages = {14},
+	file = {Full Text PDF:/Users/akilan/Zotero/storage/7IP6NUSJ/Küçük et al. - 2019 - Managing confidentiality leaks through private alg.pdf:application/pdf;Snapshot:/Users/akilan/Zotero/storage/9NJP259K/s13635-019-0091-5.html:text/html},
 
 
 
