added gnatt chart changes

--- a/LiteratureReview/literatureReview.tex
+++ b/LiteratureReview/literatureReview.tex
@@ -16,7 +16,8 @@
 The literature review is split into 3 sections. The first section talks about the papers surveyed 
 for Unikernels and the 2nd section talks about papers surveyed for TAG based architectures and 
 the third sections talks about the possible incentives of combining them both which helps 
-answer the research questions stated (TODO: Add reference to research question section). 
+answer the research questions stated.
+% (TODO: Add reference to research question section). 
 
 \section[Unikernels]{Unikernels Survey}
 The following section is the Uni-kernel Survey which starts 
