--- a/ResearchTimeline/researchTimeline.tex
+++ b/ResearchTimeline/researchTimeline.tex
@@ -83,6 +83,14 @@ my personal of machine, but over the semester
 
 \subsection{Year 2}
 This section is split by a month by month planner to help keep tracks of tasks. 
+\begin{landscape}
+\begin{figure}[htbp!] 
+  \centering    
+  \includegraphics[width=6\textwidth]{gnatt}
+  \caption[Planner]{Gantt Chart till summer 2023}
+  \label{fig:Gantt Chart}
+  \end{figure}
+\end{landscape}
 
 \subsubsection{January 2023}
 The high level overview being that most of the setups for the upcoming experiments
