intial draft report

--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -28,7 +28,7 @@ either at compile time or as a separate process after compile time.
 policies}
 In context of the following TAG based architectures would be 
 of interest. Tagged based architecture can be classified as 
-hardware security primitives which data and code with tags. 
+hardware security primitives which consists of data and code with tags. 
 Tags function as security metadata mostly about memory. This is
 created before run-time. During run-time the hardware 
 would enforce the following policies which in return 
@@ -39,29 +39,28 @@ various architectures}
 In context of the following the Multi kernel approach would 
 be of interest. Multi-kernel approach treats a multi-core machine 
 as a network of independent cores. This means a program would interact
-multiple cores the same it would interact with a distributed systems 
+with multiple cores the same way as it would interact with a distributed systems 
 using message passing as an example. 
 
 \subsection{Discussion}
-Based on the following 3 subsections discussion the aim of the 
+Based on the following 3 subsections the aim of the 
 following PhD would be combine all the 3 approaches into a 
 single system which would allow programs to be more scalable, 
-provide the possibility to certain parts of a program on secure 
+provide the possibility to run certain parts of a program on secure 
 hardware and improve the performance by using a slim down kernel. 
 The literature review section covers the following in depth. 
 
 \subsection{Organization of this report}
 The following report is organized into 6 sections:
 \begin{itemize}
-    \item Introduction: Covers the introduction of the following report 
-    is a simple as possible explanation to incoming sections.
+    \item Introduction: Covers the introduction of the following report.
     \item Research Questions: Covers the identified research questions 
     based on activities conducted in year 1.
     \item Literature Review: Covers a full survey of implementations/ papers 
     on Uni-kernels, Multi-kernels and TAG based architectures.
-    \item Year 1 activity: Covers the activities conducted during the year 1 
+    \item Year 1 Activity: Covers the activities conducted during the year 1 
     of the following research.
-    \item Research Timeline: Provides a proposed timeline of activities to conducted 
+    \item Research Timeline: Provides a proposed timeline of activities to be conducted 
     during the following research.
     \item Conclusion: Provides a summary of the following report.
 \end{itemize}
