--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -5,15 +5,15 @@
 
 \chapter{Conclusion}  %Title of the Conclusion
 This report provides a proposal for the potential research 
-activities for the following. The main focus would be 
+activities for the following PhD. The main focus would be 
 the literature review section which covers most of important 
 bits of the following report. Based on the surveyed implementation 
 in the literature review which is for Uni-kernels, Multi-kernels 
-and TAG based architecture. The mappings about the following 
+and TAG based architecture the identified mappings are the following 
 for Uni-kernels the best implementation of among the uni-kernel 
-implementations surveyed would Hermit-Core, For Multi-kernels 
+implementations surveyed would be Hermit-Core, For Multi-kernels 
 Popcorn linux would be suitable choice and for TAG based architecture
-CHERI would be a suitable. Referring to the literature review 
+CHERI would be a suitable the literature review 
 provides the exact reasons. The research timeline section helped
-more create focused depth of the initial milestones for the research 
+to create a focused depth of the initial milestones for the research 
 activities to be conducted.
