added changes for conclusion

--- a/Conclusion/conclusion.tex
+++ b/Conclusion/conclusion.tex
@@ -9,11 +9,10 @@ activities for the following PhD. The main focus would be
 the literature review section which covers most of important 
 bits of the following report. Based on the surveyed implementation 
 in the literature review which is for Uni-kernels, Multi-kernels 
-and TAG based architecture the identified mappings are the following 
-for Uni-kernels the best implementation of among the uni-kernel 
-implementations surveyed would be Hermit-Core, For Multi-kernels 
+and TAG based architecture the identified mappings are as the followings 
+for Uni-kernels the best implementation of among the surveyed would be Hermit-Core, For Multi-kernels 
 Popcorn linux would be suitable choice and for TAG based architecture
-CHERI would be a suitable the literature review 
+CHERI would be a suitable choice. The literature review section
 provides the exact reasons. The research timeline section helped
 to create a focused depth of the initial milestones for the research 
 activities to be conducted.
