added split for the gnatt charts

--- a/ResearchTimeline/researchTimeline.tex
+++ b/ResearchTimeline/researchTimeline.tex
@@ -83,14 +83,30 @@ my personal of machine, but over the semester
 
 \subsection{Year 2}
 This section is split by a month by month planner to help keep tracks of tasks. 
-\begin{landscape}
+% \begin{landscape}
 \begin{figure}[htbp!] 
   \centering    
-  \includegraphics[width=6\textwidth]{gnatt}
+  \includegraphics[width=1.2\textwidth]{gnatt-1}
   \caption[Planner]{Gantt Chart till summer 2023}
   \label{fig:Gantt Chart}
   \end{figure}
-\end{landscape}
+% \end{landscape}
+% \begin{landscape}
+  \begin{figure}[htbp!] 
+    \centering    
+    \includegraphics[width=1.2\textwidth]{gnatt-2}
+    \caption[Planner]{Gantt Chart till summer 2023}
+    \label{fig:Gantt Chart}
+    \end{figure}
+  % \end{landscape}
+  % \begin{landscape}
+    \begin{figure}[htbp!] 
+      \centering    
+      \includegraphics[width=1.2\textwidth]{gnatt-3}
+      \caption[Planner]{Gantt Chart till summer 2023}
+      \label{fig:Gantt Chart}
+      \end{figure}
+    % \end{landscape}  
 
 \subsubsection{January 2023}
 The high level overview being that most of the setups for the upcoming experiments
