--- a/Introduction/introduction.tex
+++ b/Introduction/introduction.tex
@@ -5,7 +5,7 @@
 
 \chapter{Introduction}  %Title of the Introduction
 Modern software practices aim for high performance and better security
-and scalability at the time. There have been few areas of research 
+and scalability at the same time. There have been few areas of research 
 which have been of great interest in the recent research in support 
 of providing a high performant system with better security as well.
 Few of ways this has been achieved is by trimming down the size of 
